ministrosdefe-qa/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: api-integracion
    namespace: ministrosdefe-qa
    resourceVersion: "9201723"
    uid: 46b92650-3afb-4042-b031-30ef367fe4a5
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv001-decl
    namespace: ministrosdefe-qa
    resourceVersion: "9201724"
    uid: d26691ed-5c56-4d8c-95ef-0d144da8b6af
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv002-bff
    namespace: ministrosdefe-qa
    resourceVersion: "9201730"
    uid: 2962a973-5492-4dc2-aafa-75bc6301fc58
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: front001-ministros-de-fe
    namespace: ministrosdefe-qa
    resourceVersion: "9201732"
    uid: ee378f2f-723d-4c9c-ac39-d0d8ff7b110e
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: proxy001-serv-externos
    namespace: ministrosdefe-qa
    resourceVersion: "9201736"
    uid: 28bb67fd-94c2-4f89-9239-ac241c749647
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
