ministrosdefe-qa/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:40:50Z"
    generateName: api-integracion-
    generation: 1
    labels:
      app: api-integracion
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: api-integracion
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: api-integracion-6klkr
    namespace: ministrosdefe-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: api-integracion
      uid: 5f80ddd9-d0ae-4014-bc34-16dc1fc094f3
    resourceVersion: "476054026"
    uid: 7bebaa1d-2ce4-4678-86ea-74153bae7ac1
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:40:51Z"
    generateName: djtrl-serv001-decl-
    generation: 1
    labels:
      app: djtrl-serv001-decl
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv001-decl-ck6pc
    namespace: ministrosdefe-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: djtrl-serv001-decl
      uid: 686460ff-224d-4bf0-b052-5fead0ce9ddd
    resourceVersion: "476054069"
    uid: 8d58a16c-8c2d-40f9-b0ea-f19f1a2d97eb
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:40:51Z"
    generateName: djtrl-serv002-bff-
    generation: 1
    labels:
      app: djtrl-serv002-bff
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv002-bff-zzt2p
    namespace: ministrosdefe-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: djtrl-serv002-bff
      uid: b55829a3-6c7d-4b65-bd37-27555b20d2f2
    resourceVersion: "476054023"
    uid: 77f37113-5b4d-412b-b4e2-b644e7fc9f61
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:40:51Z"
    generateName: front001-ministros-de-fe-
    generation: 1
    labels:
      app: front001-ministros-de-fe
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: front001-ministros-de-fe-4wp9s
    namespace: ministrosdefe-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: front001-ministros-de-fe
      uid: a2d349e9-d961-4c50-b10d-c51aece44011
    resourceVersion: "476054066"
    uid: 47e500c9-9f57-4233-b9fe-23cb39729e8f
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-22T19:40:51Z"
    generateName: proxy001-serv-externos-
    generation: 1
    labels:
      app: proxy001-serv-externos
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: proxy001-serv-externos-7lgp2
    namespace: ministrosdefe-qa
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: proxy001-serv-externos
      uid: 3e24e5f4-ce07-482a-9db1-a7468b7de6e7
    resourceVersion: "476054019"
    uid: 48bc7d2a-e802-44fa-be22-de9521590d49
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
