ministrosdefe-qa/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: api-integracion
    namespace: ministrosdefe-qa
    resourceVersion: "9201755"
    uid: b8875025-6682-427c-beea-cee795e673b9
  spec:
    host: api-integracion-ministros-de-fe-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: api-integracion
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:40:50Z"
        status: "True"
        type: Admitted
      host: api-integracion-ministros-de-fe-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv001-decl
    namespace: ministrosdefe-qa
    resourceVersion: "9201757"
    uid: 55ee93f4-a10d-411a-8671-04a7fb5d3272
  spec:
    host: djtrl-serv001-ministros-de-fe-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: djtrl-serv001-decl
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:40:50Z"
        status: "True"
        type: Admitted
      host: djtrl-serv001-ministros-de-fe-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv002-bff
    namespace: ministrosdefe-qa
    resourceVersion: "9201759"
    uid: 17bdd7ff-3423-40aa-9515-3cd4d39d6ce5
  spec:
    host: djtrl-serv002-ministros-de-fe-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: djtrl-serv002-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:40:50Z"
        status: "True"
        type: Admitted
      host: djtrl-serv002-ministros-de-fe-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: front001-ministros-de-fe
    namespace: ministrosdefe-qa
    resourceVersion: "9201761"
    uid: 7db53a03-0d9c-48e2-af0b-a560a1d4536f
  spec:
    host: front001-ministros-de-fe-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: front001-ministros-de-fe
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:40:50Z"
        status: "True"
        type: Admitted
      host: front001-ministros-de-fe-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: proxy001-serv-externos
    namespace: ministrosdefe-qa
    resourceVersion: "9201763"
    uid: 73323134-02c4-4063-8f5c-8f62b259978d
  spec:
    host: proxy001-ministros-de-fe-qa.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: proxy001-serv-externos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-22T19:40:50Z"
        status: "True"
        type: Admitted
      host: proxy001-ministros-de-fe-qa.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
