ministrosdefe-qa/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:40:50Z"
    labels:
      app: api-integracion
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: api-integracion
    namespace: ministrosdefe-qa
    resourceVersion: "9201765"
    uid: 5f80ddd9-d0ae-4014-bc34-16dc1fc094f3
  spec:
    clusterIP: 172.30.107.199
    clusterIPs:
    - 172.30.107.199
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: api-integracion
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:40:51Z"
    labels:
      app: djtrl-serv001-decl
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv001-decl
    namespace: ministrosdefe-qa
    resourceVersion: "9201769"
    uid: 686460ff-224d-4bf0-b052-5fead0ce9ddd
  spec:
    clusterIP: 172.30.135.108
    clusterIPs:
    - 172.30.135.108
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: djtrl-serv001-decl
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:40:51Z"
    labels:
      app: djtrl-serv002-bff
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: djtrl-serv002-bff
    namespace: ministrosdefe-qa
    resourceVersion: "9201779"
    uid: b55829a3-6c7d-4b65-bd37-27555b20d2f2
  spec:
    clusterIP: 172.30.99.104
    clusterIPs:
    - 172.30.99.104
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: djtrl-serv002-bff
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:40:51Z"
    labels:
      app: front001-ministros-de-fe
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: front001-ministros-de-fe
    namespace: ministrosdefe-qa
    resourceVersion: "9201792"
    uid: a2d349e9-d961-4c50-b10d-c51aece44011
  spec:
    clusterIP: 172.30.60.125
    clusterIPs:
    - 172.30.60.125
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      deploymentconfig: front001-ministros-de-fe
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-22T19:40:51Z"
    labels:
      app: proxy001-serv-externos
      migration.openshift.io/migrated-by-migmigration: 7d6e62b2-bb11-4fde-bd11-ef8b44259562
      migration.openshift.io/migrated-by-migplan: 5ae88ccd-2300-4fae-80eb-6d8c6ca3cb33
      velero.io/backup-name: migration-71619-initial-wppgl
      velero.io/restore-name: migration-71619-final-2qxzl
    name: proxy001-serv-externos
    namespace: ministrosdefe-qa
    resourceVersion: "9201810"
    uid: 3e24e5f4-ce07-482a-9db1-a7468b7de6e7
  spec:
    clusterIP: 172.30.33.135
    clusterIPs:
    - 172.30.33.135
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: proxy001-serv-externos
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
